@@ -1,84 +1,0 @@
-.TH QUERY  1 BRL-CAD
-.\"                        Q U E R Y . 1
-.\" BRL-CAD
-.\"
-.\" Copyright (c) 2005-2010 United States Government as represented by
-.\" the U.S. Army Research Laboratory.
-.\"
-.\" Redistribution and use in source (Docbook format) and 'compiled'
-.\" forms (PDF, PostScript, HTML, RTF, etc), with or without
-.\" modification, are permitted provided that the following conditions
-.\" are met:
-.\"
-.\" 1. Redistributions of source code (Docbook format) must retain the
-.\" above copyright notice, this list of conditions and the following
-.\" disclaimer.
-.\"
-.\" 2. Redistributions in compiled form (transformed to other DTDs,
-.\" converted to PDF, PostScript, HTML, RTF, and other formats) must
-.\" reproduce the above copyright notice, this list of conditions and
-.\" the following disclaimer in the documentation and/or other
-.\" materials provided with the distribution.
-.\"
-.\" 3. The name of the author may not be used to endorse or promote
-.\" products derived from this documentation without specific prior
-.\" written permission.
-.\"
-.\" THIS DOCUMENTATION IS PROVIDED BY THE AUTHOR AS IS'' AND ANY
-.\" EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-.\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-.\" PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
-.\" ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
-.\" OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
-.\" BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-.\" LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-.\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
-.\" USE OF THIS DOCUMENTATION, EVEN IF ADVISED OF THE POSSIBILITY OF
-.\" SUCH DAMAGE.
-.\"
-.\".\".\"
-.SH NAME
-query \- query the user for input
-.SH SYNOPSIS
-.B query
-.RB [ \-t\ seconds]
-.RB [ \-r\ response]
-.RB [ \-v]
-.RB [ \-l]
-.SH DESCRIPTION
-By default,
-.I query
-reads a line from standard input and echoes it to standard output.
-options include:
-.TP
-.B \-t seconds
-Timeout after
-.I seconds
-seconds.  If no input has been seen by this time,
-query will echo the default response value to standard output.
-.TP
-.B \-r response
-Change the default response to
-.I  response.
-The default
-response is "y" if not set with this option.  The \-r option is
-only useful in conjunction with \-t or \-l.
-.TP
-.B \-v
-Turn on verbosity.  This will echo to stderr what the current response
-is and what the timeout is if timeout is set.  There is no newline sent
-after the message.
-.TP
-.B \-l
-Loop rather than return response when a timeout occurs.  If timeout is
-not set it defaults to 5 seconds for loops.  This will also cause a
-message to appear on stderr stating what the default is and what the
-loop intervel is.  At the end of each loop,
-.I query
-will output a newline and bell.
-.SH DIAGNOSTICS
-Exit status is 0 if everything is OK, 1 for usage error.
-.SH "BUG REPORTS"
-Reports of bugs or problems should be submitted via electronic
-mail to <devs@brlcad.org>.
